test/invalid/baseline/dict-required-default.txt
Syntax error at line 4, since `dictionary Dict`:
  required long member = 0;
                          ^ Required member must not have a default
